[gd_scene load_steps=13 format=3 uid="uid://de45h6qpoj4id"]

[ext_resource type="Script" path="res://scripts/Menus/menu.gd" id="1_iuj2n"]
[ext_resource type="Texture2D" uid="uid://drerndh7dxdit" path="res://Assets/ui/MenuInicio/1.png" id="2_0gmbe"]
[ext_resource type="Texture2D" uid="uid://bjsh8m8jwmxgl" path="res://Assets/ui/MenuInicio/2.png" id="3_bo6hr"]
[ext_resource type="Texture2D" uid="uid://dlqrf4mgcnaa6" path="res://Assets/ui/MenuInicio/3.png" id="4_3w13h"]
[ext_resource type="Texture2D" uid="uid://cbsxmig02t622" path="res://Assets/ui/MenuInicio/4.png" id="5_cpjjl"]
[ext_resource type="Texture2D" uid="uid://gqv3x21f3xps" path="res://Assets/ui/MenuInicio/Box_Blank_Rounded.png" id="6_2m1ys"]
[ext_resource type="Texture2D" uid="uid://cfsalvbowwe3h" path="res://Assets/ui/MenuInicio/Play-Idle@0.5x.png" id="6_pahbv"]
[ext_resource type="Texture2D" uid="uid://b8prtql0u1hvi" path="res://Assets/ui/MenuInicio/Exit-Idle@0.5x.png" id="7_fsdya"]
[ext_resource type="Texture2D" uid="uid://c8rvsnc1jv5c7" path="res://Assets/ui/MenuInicio/Play-Hover@0.5x.png" id="7_ns7lu"]
[ext_resource type="Texture2D" uid="uid://ddkfg3be5xthi" path="res://Assets/ui/MenuInicio/Exit-Hover@0.5x.png" id="9_aypxv"]

[sub_resource type="LabelSettings" id="LabelSettings_0wv2e"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ci0of"]
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control" groups=["menu"]]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iuj2n")
icon_salir_hover = ExtResource("9_aypxv")
icon_start_hover = ExtResource("7_ns7lu")
icon_salir_idle = ExtResource("7_fsdya")
icon_start_idle = ExtResource("6_pahbv")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_0gmbe")

[node name="Fondo2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_bo6hr")

[node name="NubesLejanas" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4_3w13h")

[node name="NubesCercanas" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("5_cpjjl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_2m1ys")

[node name="Container" type="HBoxContainer" parent="TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.587
anchor_right = 0.5
anchor_bottom = 0.587
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/Container"]
layout_mode = 2

[node name="Start" type="Button" parent="TextureRect/Container/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_pahbv")
flat = true

[node name="Label" type="Label" parent="TextureRect/Container/VBoxContainer"]
layout_mode = 2
text = "JUGAR"
label_settings = SubResource("LabelSettings_0wv2e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="TextureRect/Container"]
layout_mode = 2

[node name="Exit" type="Button" parent="TextureRect/Container/VBoxContainer2"]
layout_mode = 2
icon = ExtResource("7_fsdya")
flat = true

[node name="Label2" type="Label" parent="TextureRect/Container/VBoxContainer2"]
layout_mode = 2
text = "SALIR"
label_settings = SubResource("LabelSettings_0wv2e")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 23.0
grow_horizontal = 2
text = "JUEGO"
label_settings = SubResource("LabelSettings_ci0of")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="TextureRect/Container/VBoxContainer/Start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Container/VBoxContainer/Start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="TextureRect/Container/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="TextureRect/Container/VBoxContainer2/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Container/VBoxContainer2/Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="TextureRect/Container/VBoxContainer2/Exit" to="." method="_on_exit_pressed"]
